Fixed adaptive on small screen

--- a/css/advantages.scss
+++ b/css/advantages.scss
@@ -45,6 +45,10 @@
     display: flex;
     justify-content: center;
 
+    @media screen and (max-width: 992px) {
+      width: 100%;
+    }
+
     img {
       width: 130px;
       height: 120px;
