--- a/css/consulting.scss
+++ b/css/consulting.scss
@@ -97,13 +97,14 @@
     }
 
     @media screen and (max-width: 900px) {
+      width: 100%;
       margin: 0 auto;
       text-align: center;
     }
   }
 
   &__text {
-    width: 503px;
+    // width: 503px;
     @include text;
     font-family: "SFUIDisplay-Regular";
   }
