--- a/css/program.scss
+++ b/css/program.scss
@@ -4,6 +4,10 @@
   position: relative;
   overflow: hidden;
 
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+  }
+
   &__wrapper {
     @include wrapper;
     max-width: 1470px;
@@ -39,18 +43,26 @@
     width: 710px;
     height: 361px;
     position: relative;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
   }
   
   &__image {
     width: 710px;
     height: 284px;
     display: block;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      object-fit: cover;
+    }
   }
 
   &__age {
     display: block;
     width: 146px;
-    height: 57px;
     line-height: 57px;
     position: absolute;
     right: 0;
@@ -58,6 +70,10 @@
     background: $white;
     border-radius: 10px 0px 0px 10px;
     text-align: center;
+
+    @media screen and (max-width: 768px) {
+      width: 20%;
+    }
   }
 
   &__text {
@@ -68,6 +84,10 @@
     border-radius: 0px 0px 30px 30px;
     position: relative;
     padding: 0 37px;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
   }
 
   &__link {
