--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,11 @@ button, select {
   position: relative;
   overflow: hidden;
 }
+@media screen and (max-width: 768px) {
+  .program {
+    font-size: 14px;
+  }
+}
 .program__wrapper {
   max-width: 1440px;
   margin: 0 auto 130px;
@@ -497,15 +502,25 @@ button, select {
   height: 361px;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .program__card {
+    width: 100%;
+  }
+}
 .program__image {
   width: 710px;
   height: 284px;
   display: block;
 }
+@media screen and (max-width: 768px) {
+  .program__image {
+    width: 100%;
+    object-fit: cover;
+  }
+}
 .program__age {
   display: block;
   width: 146px;
-  height: 57px;
   line-height: 57px;
   position: absolute;
   right: 0;
@@ -513,6 +528,11 @@ button, select {
   background: #fff;
   border-radius: 10px 0px 0px 10px;
   text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .program__age {
+    width: 20%;
+  }
 }
 .program__text {
   width: 710px;
@@ -522,6 +542,11 @@ button, select {
   border-radius: 0px 0px 30px 30px;
   position: relative;
   padding: 0 37px;
+}
+@media screen and (max-width: 768px) {
+  .program__text {
+    width: 100%;
+  }
 }
 .program__link {
   display: block;
@@ -602,6 +627,11 @@ button, select {
   background: #fff;
   display: flex;
   justify-content: center;
+}
+@media screen and (max-width: 992px) {
+  .advantages__card {
+    width: 100%;
+  }
 }
 .advantages__card img {
   width: 130px;
@@ -735,12 +765,12 @@ button, select {
 }
 @media screen and (max-width: 900px) {
   .consulting__content {
+    width: 100%;
     margin: 0 auto;
     text-align: center;
   }
 }
 .consulting__text {
-  width: 503px;
   font-family: "SFUIDisplay-Thin";
   font-size: 18px;
   line-height: 22px;
